// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UnknownElement in development should render a warning 1`] = `
<span
  style="color: white; background-color: red;"
>
  Node type is undefined
</span>
`;

exports[`UnknownElement in development should render a warning and the children 1`] = `
<div>
  <span
    style="color: white; background-color: red;"
  >
    Node type is undefined
  </span>
  <p>
    Foo
  </p>
</div>
`;

exports[`UnknownElement in production should render null 1`] = `null`;

exports[`UnknownElement in production should render the children 1`] = `
<p>
  Bar
</p>
`;
